# ckt2

./: .gitignore  CMakeLists.txt  README.md
ckt/: CMakeLists.txt
ckt/include/: cuda_config.hpp  for_each.hpp  for_each_shm.hpp  kernel.hpp  policy.hpp  utility.hpp
tests/: foreach_block_test.cu  foreach_shm_test.cu  foreach_test.cu
